--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.6",
     "ejs": "^3.1.9",
+    "ejs-lint": "^2.0.0",
     "ejs-mate": "^4.0.0",
     "express": "^4.18.3",
     "express-session": "^1.18.0",
